# tenco-analyze

./: README.md
docs/: CharacterIDs  LastRecordDocs  NewAccount.xml  NewVersionDocs  ReportFormat.XML  ReportFormat.xml
tenclone/: tenclone.cabal
tenclone/src/: Main.hs
tenclone/src/Data/: Soku.hs  Tracker.hs
tenclone/src/Data/Rating/: Glicko.hs
tenclone/src/Data/Soku/: Accounts.hs  Match.hs  Requests.hs
tenclone/src/Data/Soku/Requests/: Xml.hs
tenclone/src/Templates/: Soku.hs
tsk-translate/src/: env.yaml  tsk_report.rb
tsk-translate/src/lib/tenco_reporter/: stdout_to_cp932_converter.rb  track_record_util.rb
