Name:                tenclone
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             GPL-3
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable tenclone
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    iso8601-time              >= 0.1   && < 0.2,
    text                      >= 0.11  && < 0.12,
    xml                       >= 1.3   && < 1.4,
    containers                >= 0.5   && < 0.6,
    safecopy                  >= 0.8   && < 0.9,
    acid-state                >= 0.12  && < 0.13,
    transformers              >= 0.3   && < 0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
